@startuml

title __PIZZA's Class Diagram__\n

  namespace pizza {
    class pizza.ChicagoPizzaStore {
        ~ createPizza()
    }
  }
  

  namespace pizza {
    class pizza.ChicagoStyleCheesePizza {
        + ChicagoStyleCheesePizza()
        ~ cut()
    }
  }
  

  namespace pizza {
    class pizza.ChicagoStyleClamPizza {
        + ChicagoStyleClamPizza()
        ~ cut()
    }
  }
  

  namespace pizza {
    class pizza.ChicagoStylePepperoniPizza {
        + ChicagoStylePepperoniPizza()
        ~ cut()
    }
  }
  

  namespace pizza {
    class pizza.ChicagoStyleVeggiePizza {
        + ChicagoStyleVeggiePizza()
        ~ cut()
    }
  }
  

  namespace pizza {
    class pizza.DependentPizzaStore {
        + createPizza()
    }
  }
  

  namespace pizza {
    class pizza.NYPizzaStore {
        ~ createPizza()
    }
  }
  

  namespace pizza {
    class pizza.NYStyleCheesePizza {
        + NYStyleCheesePizza()
    }
  }
  

  namespace pizza {
    class pizza.NYStyleClamPizza {
        + NYStyleClamPizza()
    }
  }
  

  namespace pizza {
    class pizza.NYStylePepperoniPizza {
        + NYStylePepperoniPizza()
    }
  }
  

  namespace pizza {
    class pizza.NYStyleVeggiePizza {
        + NYStyleVeggiePizza()
    }
  }
  

  namespace pizza {
    abstract class pizza.Pizza {
        ~ dough : String
        ~ name : String
        ~ sauce : String
        ~ toppings : ArrayList
        + getName()
        + toString()
        ~ bake()
        ~ box()
        ~ cut()
        ~ prepare()
    }
  }
  

  namespace pizza {
    abstract class pizza.PizzaStore {
        + orderPizza()
        {abstract} ~ createPizza()
    }
  }
  

  namespace pizza {
    class pizza.PizzaTestDrive {
        {static} + main()
    }
  }
  

  pizza.ChicagoPizzaStore -up-|> pizza.PizzaStore
  pizza.ChicagoStyleCheesePizza -up-|> pizza.Pizza
  pizza.ChicagoStyleClamPizza -up-|> pizza.Pizza
  pizza.ChicagoStylePepperoniPizza -up-|> pizza.Pizza
  pizza.ChicagoStyleVeggiePizza -up-|> pizza.Pizza
  pizza.NYPizzaStore -up-|> pizza.PizzaStore
  pizza.NYStyleCheesePizza -up-|> pizza.Pizza
  pizza.NYStyleClamPizza -up-|> pizza.Pizza
  pizza.NYStylePepperoniPizza -up-|> pizza.Pizza
  pizza.NYStyleVeggiePizza -up-|> pizza.Pizza


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
